# Project-IE-4k

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  bg1-reference.cfg  bg1-x4.cfg  bg2-reference.cfg  bg2-x1.cfg  bg2-x4.cfg  bg2ee-reference.cfg  compile.sh  demo-reference.cfg  demo-x2.cfg  demo-x4.cfg  projectie4k.cpp
.github/workflows/: build.yml
cmake/: PIE4KInstall.cmake  pie4k_paths.h.in
core/: CFG.cpp  CFG.h  ConfigParser.cpp  ConfigParser.h  GlobalContext.cpp  GlobalContext.h  SClassID.h
core/Logging/: ConsoleLogWriter.cpp  ConsoleLogWriter.h  FileLogWriter.cpp  FileLogWriter.h  Logger.cpp  Logger.h  Logging.cpp  Logging.h
core/OperationsMonitor/: AmdSysfsGpuProvider.cpp  AmdSysfsGpuProvider.h  GpuProvider.h  GpuProviderFactory.cpp  GpuProviderFactory.h  IntelL0GpuProvider.cpp  IntelL0GpuProvider.h  NvmlGpuProvider.cpp  NvmlGpuProvider.h  OperationsMonitor.cpp  OperationsMonitor.h  PerformanceProfiler.cpp  PerformanceProfiler.h  ResourceMonitor.cpp  ResourceMonitor.h  ResourceReservation.cpp  ResourceReservation.h  TaskScheduler.cpp  TaskScheduler.h  WindowsDxgiGpuProvider.cpp  WindowsDxgiGpuProvider.h
core/Rules/: RulesEngine.cpp  RulesEngine.h
plugins/: ColorReducer.h  CommandRegistry.h  PluginBase.cpp  PluginBase.h  PluginManager.cpp  PluginManager.h
plugins/2DA/: 2DA.cpp  2DA.h  TwoDATable.cpp  TwoDATable.h
plugins/ARE/: ARE.cpp  ARE.h  AREV1.hpp
plugins/BAM/: BAM.cpp  BAM.h  BAMV1.hpp  BAMV2.hpp
plugins/BCS/: BCS.cpp  BCS.h  BCSCompiler.cpp  BCSCompiler.h  BcsDecompiler.cpp  BcsDecompiler.h  IdsMapCache.cpp  IdsMapCache.h  Signatures.cpp  Signatures.h
plugins/BMP/: BMP.cpp  BMP.h  HM.hpp  LM.hpp  LN.hpp  SR.hpp
plugins/CHU/: CHU.cpp  CHU.h  CHUV1.hpp
plugins/DLG/: DLG.cpp  DLG.h  DLGV1.hpp
plugins/GAM/: GAM.cpp  GAM.h  GAMV1.1.hpp  GAMV2.0.hpp  GAMV2.2.hpp
plugins/KEY/: KEY.cpp  KEY.h
plugins/MOS/: MOS.cpp  MOS.h  MOSV1.hpp  MOSV2.hpp
plugins/MVE/: MVE.cpp  MVE.h  gstmvedemux.h  mveaudiodec.cpp  mvevideodec8.cpp  mvideodec16.cpp
plugins/PLT/: PLT.cpp  PLT.h  PLTV1.hpp
plugins/PNG/: PNG.cpp  PNG.h
plugins/PRO/: PRO.cpp  PRO.h  PROV1.hpp
plugins/PVRZ/: PVRZ.cpp  PVRZ.h
plugins/TIS/: TIS.cpp  TIS.h  TISV1.hpp  TISV2.hpp
plugins/WED/: WED.cpp  WED.h  WEDV1.3.hpp  WEDV1.4.hpp
plugins/WMP/: WMP.cpp  WMP.h  WMPV1.hpp
rules/: 2DA.json  BMP.json  FONTS.2DA.json
scripts/: check-dependencies.sh
scripts/debug/: baf.sh  bcs.sh  check_headers.sh  gdb-wrap.sh
scripts/gemrb/: install.sh  make-thumbnails.sh  run-fullscreen.sh  uninstall.sh
scripts/performance/: performance.sh
scripts/pie4k-commands/: bam-assemble-btnhor.sh  bam-assemble-swirl.sh  bam-assemble-zhmw1a1.sh  bam-extract-btnhor.sh  bam-extract-zhmw1a1.sh  mos-extract-guicporb.sh  tis-extract-ar0011.sh  tis-extract-ar0100.sh  tis-extract-ar0110.sh
services/: ServiceBase.cpp  ServiceBase.h  ServiceManager.cpp  ServiceManager.h
services/OperationsTrackerService/: OperationsTrackerService.cpp  OperationsTrackerService.h
services/ResourceService/: BIFArchive.cpp  BIFArchive.h  BIFService.cpp  BIFService.h  KEYService.cpp  KEYService.h  ResourceCoordinatorService.cpp  ResourceCoordinatorService.h  ResourceTypes.h
services/StatisticsService/: StatisticsService.cpp  StatisticsService.h
services/Upscaler/: NcnnAllocator.cpp  NcnnAllocator.h  Upscaler.cpp  Upscaler.h  UpscalerService.cpp  UpscalerService.h
